nikon_microscope/PI_GCS2_DLL.h

/////////////////////////////////////////////////////////////////////////////
// DLL initialization and comm functions
int PI_FUNC_DECL PI_InterfaceSetupDlg(const char* szRegKeyName);
int PI_FUNC_DECL PI_ConnectRS232(int nPortNr, int iBaudRate);
int     PI_FUNC_DECL    PI_OpenRS232DaisyChain(int iPortNumber, int iBaudRate, int* pNumberOfConnectedDaisyChainDevices, char* szDeviceIDNs, int iBufferSize);
int     PI_FUNC_DECL    PI_ConnectDaisyChainDevice(int iPortId, int iDeviceNumber);
void    PI_FUNC_DECL    PI_CloseDaisyChain(int iPortId);
int     PI_FUNC_DECL    PI_ConnectRS232ByDevName(const char* szDevName, int BaudRate);
int     PI_FUNC_DECL    PI_ConnectNIgpib(int nBoard, int nDevAddr);
int     PI_FUNC_DECL    PI_ConnectTCPIP(const char* szHostname, int port);
int     PI_FUNC_DECL    PI_EnableTCPIPScan(int iMask);
int     PI_FUNC_DECL    PI_EnumerateTCPIPDevices(char* szBuffer, int iBufferSize, const char* szFilter);
int     PI_FUNC_DECL    PI_ConnectTCPIPByDescription(const char* szDescription);
int     PI_FUNC_DECL    PI_EnumerateUSB(char* szBuffer, int iBufferSize, const char* szFilter);
int     PI_FUNC_DECL    PI_ConnectUSB(const char* szDescription);
int     PI_FUNC_DECL    PI_ConnectUSBWithBaudRate(const char* szDescription,int iBaudRate);
int     PI_FUNC_DECL    PI_OpenUSBDaisyChain(const char* szDescription, int* pNumberOfConnectedDaisyChainDevices, char* szDeviceIDNs, int iBufferSize);
BOOL    PI_FUNC_DECL    PI_IsConnected(int ID);
void    PI_FUNC_DECL    PI_CloseConnection(int ID);
int     PI_FUNC_DECL    PI_GetError(int ID);
BOOL    PI_FUNC_DECL    PI_SetErrorCheck(int ID, BOOL bErrorCheck);
BOOL    PI_FUNC_DECL    PI_TranslateError(int errNr, char* szBuffer, int iBufferSize);
/////////////////////////////////////////////////////////////////////////////
// general
BOOL PI_FUNC_DECL PI_qERR(int ID, int* pnError);
BOOL PI_FUNC_DECL PI_qIDN(int ID, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_INI(int ID, const char* szAxes);
BOOL PI_FUNC_DECL PI_qHLP(int ID, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_qHPA(int ID, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_qHPV(int ID, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_qCSV(int ID, double* pdCommandSyntaxVersion);
BOOL PI_FUNC_DECL PI_qOVF(int ID, const char* szAxes, BOOL* piValueArray);
BOOL PI_FUNC_DECL PI_RBT(int ID);
BOOL PI_FUNC_DECL PI_REP(int ID);
BOOL PI_FUNC_DECL PI_BDR(int ID, int iBaudRate);
BOOL PI_FUNC_DECL PI_qBDR(int ID, int* iBaudRate);
BOOL PI_FUNC_DECL PI_DBR(int ID, int iBaudRate);
BOOL PI_FUNC_DECL PI_qDBR(int ID, int* iBaudRate);
BOOL PI_FUNC_DECL PI_qVER(int ID, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_qSSN(int ID, char* szSerialNumber, int iBufferSize);
BOOL PI_FUNC_DECL PI_CCT(int ID, int iCommandType);
BOOL PI_FUNC_DECL PI_qCCT(int ID, int *iCommandType);
BOOL PI_FUNC_DECL PI_qTVI(int ID, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_IFC(int ID, const char* szParameters, const char* szValues);
BOOL PI_FUNC_DECL PI_qIFC(int ID, const char* szParameters, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_IFS(int ID, const char* szPassword, const char* szParameters, const char* szValues);
BOOL PI_FUNC_DECL PI_qIFS(int ID, const char* szParameters, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_MOV(int ID, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_qMOV(int ID, const char* szAxes, double* pdValueArray);
BOOL PI_FUNC_DECL PI_MVR(int ID, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_POS(int ID, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_qPOS(int ID, const char* szAxes, double* pdValueArray);
BOOL PI_FUNC_DECL PI_IsMoving(int ID, const char* szAxes, BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_HLT(int ID, const char* szAxes);
BOOL PI_FUNC_DECL PI_STP(int ID);
BOOL PI_FUNC_DECL PI_qONT(int ID, const char* szAxes, BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_RTO(int ID, const char* szAxes);
BOOL PI_FUNC_DECL PI_qRTO(int ID, const char* szAxes, int* piValueArray);
BOOL PI_FUNC_DECL PI_ATZ(int ID, const char* szAxes, const double* pdLowvoltageArray, const BOOL* pfUseDefaultArray);
BOOL PI_FUNC_DECL PI_qATZ(int ID, const char* szAxes, int* piAtzResultArray);
BOOL PI_FUNC_DECL PI_AOS(int ID, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_qAOS(int ID, const char* szAxes, double* pdValueArray);
BOOL PI_FUNC_DECL PI_SVA(int ID, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_qSVA(int ID, const char* szAxes, double* pdValueArray);
BOOL PI_FUNC_DECL PI_SVR(int ID, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_DFH(int ID, const char* szAxes);
BOOL PI_FUNC_DECL PI_qDFH(int ID, const char* szAxes, double* pdValueArray);
BOOL PI_FUNC_DECL PI_GOH(int ID, const char* szAxes);
BOOL PI_FUNC_DECL PI_qCST(int ID, const char* szAxes, char* szNames, int iBufferSize);
BOOL PI_FUNC_DECL PI_CST(int ID, const char* szAxes, const char* szNames);
BOOL PI_FUNC_DECL PI_qVST(int ID, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_qPUN(int ID, const char* szAxes, char* szUnit, int iBufferSize);
BOOL PI_FUNC_DECL PI_SVO(int ID, const char* szAxes, const BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_qSVO(int ID, const char* szAxes, BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_SMO( int ID, const char*  szAxes, const int* piValueArray);
BOOL PI_FUNC_DECL PI_qSMO(int ID, const char* szAxes, int* piValueArray);
BOOL PI_FUNC_DECL PI_DCO(int ID, const char* szAxes, const BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_qDCO(int ID, const char* szAxes, BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_BRA(int ID, const char* szAxes, const BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_qBRA(int ID, const char* szAxes, BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_RON(int ID, const char* szAxes, const BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_qRON(int ID, const char* szAxes, BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_VEL(int ID, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_qVEL(int ID, const char* szAxes, double* pdValueArray);
BOOL PI_FUNC_DECL PI_qTCV(int ID, const char* szAxes, double* pdValueArray);
BOOL PI_FUNC_DECL PI_ACC(int ID, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_qACC(int ID, const char* szAxes, double* pdValueArray);
BOOL PI_FUNC_DECL PI_DEC(int ID, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_qDEC(int ID, const char* szAxes, double* pdValueArray);