nikon_microscope/PI_GCS2_DLL.bas

Attribute VB_Name = "MPI_GCS2"
'/////////////////////////////////////////////////////////////////////////////
'// This is a part of the PI-Software Sources
'// Copyright (C) 1995-2002 PHYSIK INSTRUMENTE GmbH
'// All rights reserved.
'//

'/////////////////////////////////////////////////////////////////////////////
'// Program: PI_G-Control DLL
'//
'// Developer: JKa
'//
'// File: PI_GCS_DLL.h :
'/////////////////////////////////////////////////////////////////////////////

'//#include <windows.h>
'//#include "stdwx.h"










'////////////////////////////////
'// E-7XX Bits (PI_BIT_XXX). //
'////////////////////////////////








'/////////////////////////////////////////////////////////////////////////////
'// DLL initialization and comm functions
Public Declare Function PI_InterfaceSetupDlg Lib "PI_GCS2_DLL.dll" (ByVal szRegKeyName As String) As Long
Public Declare Function PI_ConnectRS232 Lib "PI_GCS2_DLL.dll" (ByVal nPortNr As Long, ByVal nBaudRate As Long) As Long
Public Declare Function PI_ConnectRS232ByDevName Lib "PI_GCS2_DLL.dll" (ByVal szDevName As String, ByVal BaudRate As Long) As Long
Public Declare Function PI_OpenRS232DaisyChain Lib "PI_GCS2_DLL.dll" (ByVal iPortNumber As Long, ByVal iBaudRate As Long, ByRef pNumberOfConnectedDaisyChainDevices As Long, ByVal szDeviceIDNs As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_ConnectDaisyChainDevice Lib "PI_GCS2_DLL.dll" (ByVal iPortId As Long, ByVal iDeviceNumber As Long) As Long
Public Declare Sub PI_CloseDaisyChain Lib "PI_GCS2_DLL.dll" (ByVal iPortId As Long)

Public Declare Function PI_ConnectNIgpib Lib "PI_GCS2_DLL.dll" (ByVal nBoard As Long, ByVal nDevAddr As Long) As Long

Public Declare Function PI_ConnectTCPIP Lib "PI_GCS2_DLL.dll" (ByVal szHostname As String, ByVal port As Long) As Long
Public Declare Function PI_EnableTCPIPScan Lib "PI_GCS2_DLL.dll" (ByVal iMask As Long) As Long
Public Declare Function PI_EnumerateTCPIPDevices Lib "PI_GCS2_DLL.dll" (ByVal szBuffer As String, ByVal iBufferSize As Long, ByVal szFilter As String) As Long
Public Declare Function PI_ConnectTCPIPByDescription Lib "PI_GCS2_DLL.dll" (ByVal szDescription As String) As Long

Public Declare Function PI_EnumerateUSB Lib "PI_GCS2_DLL.dll" (ByVal szBuffer As String, ByVal iBufferSize As Long, ByVal szFilter As String) As Long
Public Declare Function PI_ConnectUSB Lib "PI_GCS2_DLL.dll" (ByVal szDescription As String) As Long
Public Declare Function PI_ConnectUSBWithBaudRate Lib "PI_GCS2_DLL.dll" (ByVal szDescription As String, ByVal iBaudRate As Long) As Long
Public Declare Function PI_OpenUSBDaisyChain Lib "PI_GCS2_DLL.dll" (ByVal szDescription As String, ByRef pNumberOfConnectedDaisyChainDevices As Long, ByVal szDeviceIDNs As String, ByVal iBufferSize As Long) As Long

Public Declare Function PI_IsConnected Lib "PI_GCS2_DLL.dll" (ByVal ID As Long) As Long
Public Declare Sub PI_CloseConnection Lib "PI_GCS2_DLL.dll" (ByVal ID As Long)
Public Declare Function PI_GetError Lib "PI_GCS2_DLL.dll" (ByVal ID As Long) As Long
Public Declare Function PI_SetErrorCheck Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal bErrorCheck As Long) As Long
Public Declare Function PI_TranslateError Lib "PI_GCS2_DLL.dll" (ByVal errNr As Long, ByVal szBuffer As String, ByVal iBufferSize As Long) As Long




'/////////////////////////////////////////////////////////////////////////////
'// general
Public Declare Function PI_qERR Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef pnError As Long) As Long
Public Declare Function PI_qIDN Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szBuffer As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_INI Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String) As Long
Public Declare Function PI_qHLP Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szBuffer As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_qHPA Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szBuffer As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_qHPV Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szBuffer As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_qCSV Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef pdCommandSyntaxVersion As Double) As Long
Public Declare Function PI_qOVF Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef piValueArray As Long) As Long
Public Declare Function PI_RBT Lib "PI_GCS2_DLL.dll" (ByVal ID As Long) As Long
Public Declare Function PI_REP Lib "PI_GCS2_DLL.dll" (ByVal ID As Long) As Long
Public Declare Function PI_BDR Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal iBaudRate As Long) As Long
Public Declare Function PI_qBDR Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal iBaudRate As Long) As Long
Public Declare Function PI_DBR Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal iBaudRate As Long) As Long
Public Declare Function PI_qDBR Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal iBaudRate As Long) As Long
Public Declare Function PI_qVER Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szBuffer As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_qSSN Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szSerialNumber As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_CCT Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal iCommandType As Long) As Long
Public Declare Function PI_qCCT Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal iCommandType As Long) As Long
Public Declare Function PI_qTVI Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szBuffer As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_IFC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szParameters As String, ByVal szValues As String) As Long
Public Declare Function PI_qIFC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szParameters As String, ByVal szBuffer As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_IFS Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szPassWord As String, ByVal szParameters As String, ByVal szValues As String) As Long
Public Declare Function PI_qIFS Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szParameters As String, ByVal szBuffer As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_qPUN Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByVal szUnit As String, ByVal iBufferSize As Long) As Long

Public Declare Function PI_MOV Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_qMOV Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_MVR Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_POS Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_qPOS Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_IsMoving Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pbValueArray As Long) As Long
Public Declare Function PI_HLT Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String) As Long
Public Declare Function PI_STP Lib "PI_GCS2_DLL.dll" (ByVal ID As Long) As Long
Public Declare Function PI_qONT Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pbValueArray As Long) As Long
Public Declare Function PI_RTO Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String) As Long
Public Declare Function PI_qRTO Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef piValueArray As Long) As Long
Public Declare Function PI_ATZ Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdLowvoltageArray As Double, ByRef pfUseDefaultArray As Long) As Long
Public Declare Function PI_qATZ Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef piAtzResultArray As Long) As Long
Public Declare Function PI_AOS Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_qAOS Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArrayas As Double) As Long

Public Declare Function PI_SVA Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_qSVA Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_SVR Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long

Public Declare Function PI_DFH Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String) As Long
Public Declare Function PI_qDFH Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_GOH Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String) As Long

Public Declare Function PI_qCST Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByVal szNames As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_CST Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByVal szNames As String) As Long
Public Declare Function PI_qVST Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szBuffer As String, ByVal iBufferSize As Long) As Long

Public Declare Function PI_SVO Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pbValueArray As Long) As Long
Public Declare Function PI_qSVO Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pbValueArray As Long) As Long
Public Declare Function PI_SMO Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef piValueArray As Long) As Long
Public Declare Function PI_qSMO Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef piValueArray As Long) As Long
Public Declare Function PI_DCO Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pbValueArray As Long) As Long
Public Declare Function PI_qDCO Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pbValueArray As Long) As Long
Public Declare Function PI_BRA Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pbValueArray As Long) As Long
Public Declare Function PI_qBRA Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pbValueArray As Long) As Long

Public Declare Function PI_RON Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pbValueArray As Long) As Long
Public Declare Function PI_qRON Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pbValueArray As Long) As Long

Public Declare Function PI_VEL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_qVEL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long

Public Declare Function PI_qTCV Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long

Public Declare Function PI_ACC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_qACC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long

Public Declare Function PI_DEC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_qDEC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
